--- a/consult/less/page_library.less
+++ b/consult/less/page_library.less
@@ -71,6 +71,11 @@ body.page-library{
 			&.articles-flow{
 				overflow: hidden;
 				//width: 100%;
+				.column{
+					float: left;
+					width: 23%;
+					margin-right: 2.66%;
+				}
 				.article{
 					float: left;
 					width: 23%;
