--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -4872,29 +4872,29 @@ body.page-library .wrapper section.search-article {
   margin-top: 30px;
 }
 /* line 7, page_library.less */
+body.page-library .wrapper section.search-article .select2-container {
+  width: 100% !important;
+  margin-top: 10px;
+}
+/* line 10, page_library.less */
+body.page-library .wrapper section.search-article .select2-container .select2-selection__arrow {
+  background: url('../images/interface/dropdown-arrow.png') center center no-repeat #41b6ad;
+}
+/* line 13, page_library.less */
+body.page-library .wrapper section.search-article .select2-container .select2-selection {
+  border-color: #41b6ad;
+}
+/* line 17, page_library.less */
 body.page-library .wrapper section.search-article form {
   overflow: hidden;
   width: 85%;
   margin: auto;
 }
-/* line 11, page_library.less */
+/* line 21, page_library.less */
 body.page-library .wrapper section.search-article form .left {
   width: 80%;
   float: left;
   margin-right: 20px;
-}
-/* line 16, page_library.less */
-body.page-library .wrapper section.search-article form .left .field .select2-container {
-  width: 100% !important;
-  margin-top: 10px;
-}
-/* line 19, page_library.less */
-body.page-library .wrapper section.search-article form .left .field .select2-container .select2-selection__arrow {
-  background: url('../images/interface/dropdown-arrow.png') center center no-repeat #41b6ad;
-}
-/* line 22, page_library.less */
-body.page-library .wrapper section.search-article form .left .field .select2-container .select2-selection {
-  border-color: #41b6ad;
 }
 /* line 26, page_library.less */
 body.page-library .wrapper section.search-article form .left .field.category {
@@ -4916,27 +4916,133 @@ body.page-library .wrapper section.search-article form .right input[type="submit
   padding: 9px 17px 8px 17px;
 }
 /* line 46, page_library.less */
+body.page-library .wrapper section.resume {
+  overflow: hidden;
+  float: left;
+  width: 50%;
+  margin-right: 2%;
+  margin-top: 30px;
+}
+/* line 52, page_library.less */
+body.page-library .wrapper section.resume .left {
+  float: left;
+  width: 28%;
+}
+/* line 55, page_library.less */
+body.page-library .wrapper section.resume .left .photo {
+  overflow: hidden;
+  border-radius: 7px;
+  -o-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -webkit-border-radius: 7px;
+}
+/* line 61, page_library.less */
+body.page-library .wrapper section.resume .left .photo img {
+  display: block;
+  width: 100%;
+}
+/* line 66, page_library.less */
+body.page-library .wrapper section.resume .left .place {
+  margin-top: 17px;
+  text-align: center;
+  color: #8aa4a2;
+  font: 400 1.2rem Roboto;
+}
+/* line 71, page_library.less */
+body.page-library .wrapper section.resume .left .place .fa {
+  color: #4ad0c5;
+}
+/* line 78, page_library.less */
+body.page-library .wrapper section.resume .right {
+  float: right;
+  width: 68%;
+  overflow: hidden;
+}
+/* line 82, page_library.less */
+body.page-library .wrapper section.resume .right header {
+  overflow: hidden;
+}
+/* line 84, page_library.less */
+body.page-library .wrapper section.resume .right header .name {
+  font: 700 1.8rem Roboto;
+}
+/* line 86, page_library.less */
+body.page-library .wrapper section.resume .right header .name a {
+  color: #4ad0c5;
+}
+/* line 89, page_library.less */
+body.page-library .wrapper section.resume .right header .name .lastname {
+  text-transform: uppercase;
+}
+/* line 92, page_library.less */
+body.page-library .wrapper section.resume .right header .name .firstname {
+  text-transform: none;
+}
+/* line 95, page_library.less */
+body.page-library .wrapper section.resume .right header .name .job {
+  color: #35504e;
+  font: 500 1.4rem Roboto;
+  margin-top: 10px;
+}
+/* line 99, page_library.less */
+body.page-library .wrapper section.resume .right header .name .job span.age {
+  margin-left: 15px;
+  color: #8aa4a2;
+}
+/* line 104, page_library.less */
+body.page-library .wrapper section.resume .right header .name p {
+  margin: 0;
+}
+/* line 109, page_library.less */
+body.page-library .wrapper section.resume .right .rating-block {
+  width: 50px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+/* line 114, page_library.less */
+body.page-library .wrapper section.resume .right a.btn {
+  margin-top: 10px;
+}
+/* line 118, page_library.less */
+body.page-library .wrapper section.resume + .search-article {
+  float: right;
+  width: 48%;
+  overflow: hidden;
+}
+/* line 122, page_library.less */
+body.page-library .wrapper section.resume + .search-article form {
+  width: 100%;
+}
+/* line 124, page_library.less */
+body.page-library .wrapper section.resume + .search-article form .left {
+  width: 65%;
+}
+/* line 130, page_library.less */
+body.page-library .wrapper section.resume + .search-article form .select2-container {
+  margin-top: 10px;
+}
+/* line 136, page_library.less */
 body.page-library .wrapper section.write-article {
   overflow: hidden;
 }
-/* line 48, page_library.less */
+/* line 138, page_library.less */
 body.page-library .wrapper section.write-article .align-container {
   float: right;
   right: 50%;
 }
-/* line 51, page_library.less */
+/* line 141, page_library.less */
 body.page-library .wrapper section.write-article .align-container .align-wrapper {
   float: left;
   left: 50%;
 }
-/* line 54, page_library.less */
+/* line 144, page_library.less */
 body.page-library .wrapper section.write-article .align-container .align-wrapper a.btn {
   display: block;
   float: right;
   margin-left: 40px;
   margin-top: 10px;
 }
-/* line 61, page_library.less */
+/* line 151, page_library.less */
 body.page-library .wrapper section.write-article .align-container .align-wrapper h1 {
   display: block;
   float: left;
@@ -4944,17 +5050,17 @@ body.page-library .wrapper section.write-article .align-container .align-wrapper
   font-size: 2.4rem;
   font-weight: 500;
 }
-/* line 71, page_library.less */
+/* line 161, page_library.less */
 body.page-library .wrapper section.articles-flow {
   overflow: hidden;
 }
-/* line 74, page_library.less */
+/* line 164, page_library.less */
 body.page-library .wrapper section.articles-flow .column {
   float: left;
   width: 23%;
   margin-right: 2.66%;
 }
-/* line 79, page_library.less */
+/* line 169, page_library.less */
 body.page-library .wrapper section.articles-flow .article {
   float: left;
   width: 23%;
@@ -4963,63 +5069,63 @@ body.page-library .wrapper section.articles-flow .article {
   overflow: hidden;
   margin-bottom: 20px;
 }
-/* line 86, page_library.less */
+/* line 176, page_library.less */
 body.page-library .wrapper section.articles-flow .article:nth-child(4n) {
   margin-right: 0;
 }
-/* line 89, page_library.less */
+/* line 179, page_library.less */
 body.page-library .wrapper section.articles-flow .article .image {
   width: 100%;
 }
-/* line 91, page_library.less */
+/* line 181, page_library.less */
 body.page-library .wrapper section.articles-flow .article .image img {
   display: block;
   width: 100%;
 }
-/* line 96, page_library.less */
+/* line 186, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content {
   width: 100%;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   padding: 20px 30px;
 }
-/* line 101, page_library.less */
+/* line 191, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content h4.article-name {
   font-size: 1.4rem;
   font-weight: 500;
   padding-top: 0;
 }
-/* line 107, page_library.less */
+/* line 197, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p {
   font-size: 1.1rem;
   margin: 5px 0;
 }
-/* line 110, page_library.less */
+/* line 200, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p.category {
   color: #35504e;
   margin-top: 0;
   font-weight: 500;
 }
-/* line 114, page_library.less */
+/* line 204, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p.category span.value {
   color: #8aa4a2;
 }
-/* line 118, page_library.less */
+/* line 208, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p.author {
   font-size: 1.2rem;
   color: #4ad0c5;
 }
-/* line 122, page_library.less */
+/* line 212, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p.introtext {
   line-height: 155%;
 }
-/* line 125, page_library.less */
+/* line 215, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p.date {
   margin-top: 10px;
   color: #b9d4cc;
   font-size: 1.0rem;
 }
-/* line 131, page_library.less */
+/* line 221, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content a.btn {
   display: block;
   text-align: center;
