--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -16,3 +16,4 @@
 @import url('page_consultation.less');
 @import url('modal_sign_up_consultation.less');
 @import url('page_library.less');
+@import url('page_library_article.less');
