--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -17,3 +17,4 @@
 @import url('modal_sign_up_consultation.less');
 @import url('page_library.less');
 @import url('page_library_article.less');
+@import url('page_library_add_article.less');
