--- a/consult/less/page_library.less
+++ b/consult/less/page_library.less
@@ -173,6 +173,7 @@ body.page-library{
 					padding: 0;
 					overflow: hidden;
 					margin-bottom: 20px;
+					height:500px;
 					&:nth-child(4n){
 						margin-right: 0;
 					}
@@ -188,6 +189,13 @@ body.page-library{
 						box-sizing:border-box;
 						-moz-box-sizing:border-box;
 						padding: 20px 30px;
+						.fader-container{
+							overflow:hidden;
+							height:165px;
+							&.full-height{
+								height: 385px;
+							}
+						}
 						h4.article-name{
 							padding-top: 0;
 							font-size: 1.4rem;
