--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -371,6 +371,7 @@ body.page-profile-schedule{
 		float: right;
 		width: 420px;
 		-webkit-user-select:none;
+		-moz-user-select:none;
 		.free-time-container{
 			position: absolute;
 			left:-65px;
