3 колонки, рядное расположение

--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -5055,13 +5055,26 @@ body.page-library .wrapper section.write-article .align-container .align-wrapper
 body.page-library .wrapper section.articles-flow {
   overflow: hidden;
 }
-/* line 164, page_library.less */
+/* line 165, page_library.less */
+body.page-library .wrapper section.articles-flow.three-columns .article {
+  width: 32%;
+  margin-right: 2%;
+}
+/* line 168, page_library.less */
+body.page-library .wrapper section.articles-flow.three-columns .article:nth-child(3n) {
+  margin-right: 0;
+}
+/* line 175, page_library.less */
+body.page-library .wrapper section.articles-flow.four-columns .article:nth-child(4n) {
+  margin-right: 0;
+}
+/* line 180, page_library.less */
 body.page-library .wrapper section.articles-flow .column {
   float: left;
   width: 23%;
   margin-right: 2.66%;
 }
-/* line 169, page_library.less */
+/* line 185, page_library.less */
 body.page-library .wrapper section.articles-flow .article {
   float: left;
   width: 23%;
@@ -5071,72 +5084,68 @@ body.page-library .wrapper section.articles-flow .article {
   margin-bottom: 20px;
   height: 500px;
 }
-/* line 177, page_library.less */
-body.page-library .wrapper section.articles-flow .article:nth-child(4n) {
-  margin-right: 0;
-}
-/* line 180, page_library.less */
+/* line 193, page_library.less */
 body.page-library .wrapper section.articles-flow .article .image {
   width: 100%;
 }
-/* line 182, page_library.less */
+/* line 195, page_library.less */
 body.page-library .wrapper section.articles-flow .article .image img {
   display: block;
   width: 100%;
 }
-/* line 187, page_library.less */
+/* line 200, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content {
   width: 100%;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   padding: 20px 30px;
 }
-/* line 192, page_library.less */
+/* line 205, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content .fader-container {
   overflow: hidden;
   height: 165px;
 }
-/* line 195, page_library.less */
+/* line 208, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content .fader-container.full-height {
   height: 385px;
 }
-/* line 199, page_library.less */
+/* line 212, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content h4.article-name {
   font-size: 1.4rem;
   font-weight: 500;
   padding-top: 0;
 }
-/* line 205, page_library.less */
+/* line 218, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p {
   font-size: 1.1rem;
   margin: 5px 0;
 }
-/* line 208, page_library.less */
+/* line 221, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p.category {
   color: #35504e;
   margin-top: 0;
   font-weight: 500;
 }
-/* line 212, page_library.less */
+/* line 225, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p.category span.value {
   color: #8aa4a2;
 }
-/* line 216, page_library.less */
+/* line 229, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p.author {
   font-size: 1.2rem;
   color: #4ad0c5;
 }
-/* line 220, page_library.less */
+/* line 233, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p.introtext {
   line-height: 155%;
 }
-/* line 223, page_library.less */
+/* line 236, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content p.date {
   margin-top: 10px;
   color: #b9d4cc;
   font-size: 1.0rem;
 }
-/* line 229, page_library.less */
+/* line 242, page_library.less */
 body.page-library .wrapper section.articles-flow .article .content a.btn {
   display: block;
   text-align: center;
